Fix: Prevent overflow of unicode characters in messages obscuring other messages

--- a/assets/SCSS/_messages.scss
+++ b/assets/SCSS/_messages.scss
@@ -3,6 +3,7 @@
 .ntv__chat-message {
 	font-size: $root_font_size;
 	padding: 0.33em 0.9em;
+	overflow: hidden;
 	margin: 0;
 
 	&:hover {
